--- a/Reviook_app/src/main/resources/it/unipi/dii/reviook_app/fxml/author.fxml
+++ b/Reviook_app/src/main/resources/it/unipi/dii/reviook_app/fxml/author.fxml
@@ -215,7 +215,7 @@
                 </Pane>
                 <Pane prefHeight="138.0" prefWidth="512.0">
                     <children>
-                        <CheckBox fx:id="follow" layoutX="308.0" layoutY="31.0" mnemonicParsing="false" onAction="#addfollow" text="follow" />
+                        <CheckBox fx:id="follow" layoutX="308.0" layoutY="31.0" mnemonicParsing="false" onAction="#addFollow" text="follow" />
                         <Text fx:id="usernameAuthor" layoutX="199.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" />
                         <VBox alignment="CENTER" layoutX="231.0" layoutY="69.0" prefHeight="64.0" prefWidth="50.0">
                             <children>
