--- a/Reviook_app/src/main/resources/it/unipi/dii/reviook_app/fxml/admin.fxml
+++ b/Reviook_app/src/main/resources/it/unipi/dii/reviook_app/fxml/admin.fxml
@@ -13,10 +13,10 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="848.0" prefWidth="1353.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unipi.dii.reviook_app.controllers.AdminController">
     <children>
-        <JFXListView fx:id="usersList" layoutX="27.0" layoutY="131.0" prefHeight="674.0" prefWidth="654.0" />
-        <JFXCheckBox fx:id="userOption" layoutX="47.0" layoutY="56.0" onAction="#selectUserCheckAction" text="Users" />
-        <JFXCheckBox fx:id="authorOption" layoutX="47.0" layoutY="87.0" onAction="#selectAuthorCheckAction" text="Authors" />
-        <JFXButton fx:id="searchButton" layoutX="554.0" layoutY="68.0" onAction="#searchAction" style="-fx-font-weight: bold;" text="SEARCH" textFill="#2152b5">
+        <JFXListView fx:id="usersList" layoutX="23.0" layoutY="154.0" prefHeight="674.0" prefWidth="654.0" />
+        <JFXCheckBox fx:id="userOption" layoutX="42.0" layoutY="69.0" onAction="#selectUserCheckAction" text="Users" />
+        <JFXCheckBox fx:id="authorOption" layoutX="42.0" layoutY="100.0" onAction="#selectAuthorCheckAction" text="Authors" />
+        <JFXButton fx:id="searchButton" layoutX="549.0" layoutY="81.0" onAction="#searchAction" style="-fx-font-weight: bold;" text="SEARCH" textFill="#2152b5">
             <graphic>
                 <FontAwesomeIconView fill="#2339a8" glyphName="SEARCH" />
             </graphic>
@@ -29,7 +29,7 @@
                 <Font size="19.0" />
             </font>
         </Text>
-        <JFXCheckBox fx:id="bookOption" layoutX="156.0" layoutY="56.0" onAction="#selectBookCheckAction" text="Books" />
+        <JFXCheckBox fx:id="bookOption" layoutX="151.0" layoutY="69.0" onAction="#selectBookCheckAction" text="Books" />
         <Text layoutX="748.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name / Title:" />
         <Text layoutX="753.0" layoutY="414.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Review Text" />
         <JFXButton fx:id="deleteElemButton" layoutX="1140.0" layoutY="769.0" onAction="#deleteElemAction" style="-fx-font-weight: bold;" text="DELETE" textFill="#bc1b1b">
@@ -43,9 +43,12 @@
         <Text layoutX="748.0" layoutY="158.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Username: / Authors" />
         <Text layoutX="748.0" layoutY="208.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Follower:" />
         <Text layoutX="747.0" layoutY="256.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description:" />
-        <JFXButton fx:id="logoutButton" layoutX="1164.0" layoutY="15.0" onAction="#logoutActon" style="-fx-font-weight: bold;" text="LOGOUT" />
-        <JFXListView fx:id="authorsList" layoutX="27.0" layoutY="132.0" prefHeight="674.0" prefWidth="654.0" />
-        <JFXListView fx:id="reviewList" layoutX="27.0" layoutY="131.0" prefHeight="674.0" prefWidth="654.0" />
+        <JFXButton fx:id="logoutButton" layoutX="1262.0" layoutY="2.0" onAction="#logoutActon" style="-fx-font-weight: bold;" text="LOGOUT">
+         <graphic>
+            <FontAwesomeIconView glyphName="UNDO" />
+         </graphic></JFXButton>
+        <JFXListView fx:id="authorsList" layoutX="23.0" layoutY="155.0" prefHeight="674.0" prefWidth="654.0" />
+        <JFXListView fx:id="reviewList" layoutX="23.0" layoutY="154.0" prefHeight="674.0" prefWidth="654.0" />
         <Text fx:id="nameTitle" layoutX="830.0" layoutY="106.0" strokeType="OUTSIDE" strokeWidth="0.0" text="-" wrappingWidth="366.015625" />
         <Text fx:id="username" layoutX="873.0" layoutY="158.0" strokeType="OUTSIDE" strokeWidth="0.0" text="-" wrappingWidth="366.015625" />
         <Text fx:id="follower" layoutX="827.0" layoutY="208.0" strokeType="OUTSIDE" strokeWidth="0.0" text="-" wrappingWidth="366.015625" />
@@ -54,7 +57,7 @@
                 <Text fx:id="description" strokeType="OUTSIDE" strokeWidth="0.0" text="-" wrappingWidth="495.13671875" />
             </content>
         </ScrollPane>
-        <JFXButton fx:id="addAdminButton" layoutX="1254.0" layoutY="15.0" onAction="#addAdminAction" style="-fx-font-weight: bold;" text="New Admin">
+        <JFXButton fx:id="addAdminButton" layoutX="9.0" layoutY="3.0" onAction="#addAdminAction" style="-fx-font-weight: bold;" text="ADD ADMIN">
             <graphic>
                 <FontAwesomeIconView glyphName="PLUS" />
             </graphic>
@@ -67,9 +70,9 @@
                 <Text fx:id="reviewText" strokeType="OUTSIDE" strokeWidth="0.0" text="-" wrappingWidth="555.13671875" />
             </content>
         </ScrollPane>
-        <JFXListView fx:id="bookList" layoutX="27.0" layoutY="131.0" prefHeight="674.0" prefWidth="654.0" />
-        <JFXCheckBox fx:id="reviewOption" layoutX="156.0" layoutY="87.0" onAction="#selectReviewCheckAction" text="Review" />
-        <TextField fx:id="usernameField" layoutX="262.0" layoutY="68.0" prefHeight="25.0" prefWidth="264.0" />
+        <JFXListView fx:id="bookList" layoutX="23.0" layoutY="154.0" prefHeight="674.0" prefWidth="654.0" />
+        <JFXCheckBox fx:id="reviewOption" layoutX="151.0" layoutY="100.0" onAction="#selectReviewCheckAction" text="Review" />
+        <TextField fx:id="usernameField" layoutX="257.0" layoutY="81.0" prefHeight="25.0" prefWidth="264.0" />
         <JFXButton fx:id="unReportButton" alignment="CENTER" layoutX="955.0" layoutY="769.0" onAction="#unReport" style="-fx-font-weight: bold;" text="FREE" textAlignment="CENTER" textFill="#0ebc4b">
             <graphic>
                 <FontAwesomeIconView fill="#1db247" glyphName="CHECK" />
@@ -79,5 +82,14 @@
             </cursor>
         </JFXButton>
       <Text fx:id="actionTarget" layoutX="718.0" layoutY="786.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="217.015625" />
+      <JFXButton fx:id="logsButton" layoutX="110.0" layoutY="3.0" onAction="#logsAction" style="-fx-font-weight: bold;" text="LOGS">
+         <graphic>
+            <FontAwesomeIconView glyphName="LIST" />
+         </graphic>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXButton>
+      <JFXListView fx:id="logsList" layoutX="23.0" layoutY="154.0" prefHeight="674.0" prefWidth="654.0" />
     </children>
 </Pane>
